--- a/Flagrum.Web/Features/EarcMods/Editor.razor
+++ b/Flagrum.Web/Features/EarcMods/Editor.razor
@@ -95,7 +95,7 @@
                     else
                     {
                         <div class="rounded-md bg-accent1-900 border border-accent1-500 text-accent1-300 p-4 mt-4">
-                            No file replacements set
+                            No file changes set
                         </div>
                     }
                 </div>
