Fixes for sRGB textures

--- a/Flagrum.Web/Layout/PatchNotes.razor
+++ b/Flagrum.Web/Layout/PatchNotes.razor
@@ -1,12 +1,18 @@
-﻿@* <h3 class="text-grey-300 mb-6">Flagrum has been updated to @Version!</h3> *@
-<h3 class="text-grey-300 mb-6">Flagrum 1.2 has arrived!</h3>
+﻿<h3 class="text-grey-300 mb-6">Flagrum has been updated to @Version!</h3>
+<div class="bg-grey-900 rounded-md border border-grey-700 p-4">
+    <span>
+        Fixed a bug where sRGB textures were causing fault normal maps
+    </span>
+</div>
+
+<h3 class="text-grey-300 mb-6 mt-6">Flagrum 1.2 has arrived!</h3>
 
 <div class="bg-grey-900 rounded-md border border-grey-700 p-4">
     <h4 class="text-grey-300 mb-4">Introducing the Mod Manager</h4>
     <span>
         Install and uninstall mods with a single click, create EARC mods with ease, import legacy mods,
         and share your mods with the community!<br/>
-        <Hyperlink Text="Learn More" Uri="https://github.com/Kizari/Flagrum/wiki/Mod-Manager" />
+        <Hyperlink Text="Learn More" Uri="https://github.com/Kizari/Flagrum/wiki/Mod-Manager"/>
     </span>
 </div>
 
@@ -14,7 +20,7 @@
     <h4 class="text-grey-300 mb-4">Introducing the Terrain Exporter</h4>
     <span>
         For the first time ever, we can now export terrain from FFXV!<br/>
-        <Hyperlink Text="Learn More" Uri="https://github.com/Kizari/Flagrum/wiki/Terrain-Exporter" />
+        <Hyperlink Text="Learn More" Uri="https://github.com/Kizari/Flagrum/wiki/Terrain-Exporter"/>
     </span>
 </div>
 
