--- a/Flagrum.Web/Features/EarcMods/Index.razor
+++ b/Flagrum.Web/Features/EarcMods/Index.razor
@@ -13,10 +13,10 @@
     <div class="flex flex-row h-full items-center">
         <div class="mx-auto text-center">
             <h4 class="text-grey-300 mb-2">
-                Mod Manager Unavailable While Indexing Files
+                @DisplayText
             </h4>
             <span>
-                Please wait until file indexing has completed
+                @SubText
             </span>
         </div>
     </div>
