--- a/Flagrum.Web/Layout/PatchNotes.razor
+++ b/Flagrum.Web/Layout/PatchNotes.razor
@@ -1,8 +1,27 @@
 ﻿<h3 class="text-grey-300 mb-6">Flagrum has been updated to @Version!</h3>
 <div class="bg-grey-900 rounded-md border border-grey-700 p-4">
-    <span>
-        Fixed a bug where sRGB textures were causing fault normal maps
+    <h5 class="text-grey-300 mb-4">Flagrum 1.2.2</h5>
+    <ul class="list-disc ml-6 mb-2">
+        <li>Fixed an issue affecting certain users on certain EARC mods where the asset explorer would target a
+            clone of a file instead of the original.</li>
+    </ul>
+    <span class="block ml-6 mb-4" style="color: #ff0000">
+        <strong>Recommended Action:</strong>
+        Disable all your active EARC mods and then regenerate the file index from the cog icon in the
+        Asset Explorer tab.
     </span>
+    <ul class="list-disc ml-6 mb-6">
+        <li>Fixed bug where Terrain Exporter would crash for some users</li>
+        <li>Fixed bug where EARC mod thumbnails were not persisting between updates</li>
+        <li>Minor UI fixes</li>
+    </ul>
+</div>
+
+<div class="bg-grey-900 rounded-md border border-grey-700 p-4 mt-6">
+    <h5 class="text-grey-300 mb-4">Flagrum 1.2.1</h5>
+    <ul class="list-disc ml-6 mb-2">
+        <li>Fixed a bug where sRGB textures were causing fault normal maps</li>
+    </ul>
 </div>
 
 <h3 class="text-grey-300 mb-6 mt-6">Flagrum 1.2 has arrived!</h3>
