Fix thumbnail copy crash on fresh installs

--- a/Flagrum.Web/Layout/MainMenu.razor
+++ b/Flagrum.Web/Layout/MainMenu.razor
@@ -54,22 +54,29 @@
         {
             if (Settings.LastVersionNotes != Version)
             {
-                var previousAppDirectory = Directory
-                    .EnumerateDirectories(Settings.FlagrumDirectory)
-                    .FirstOrDefault(d => d.Contains(@"\app-") && !d.Contains($@"\app-{Version}"));
-
-                var previousThumbnailDirectory = $@"{previousAppDirectory}\wwwroot\EarcMods";
-
-                foreach (var thumbnail in Directory.EnumerateFiles(previousThumbnailDirectory))
+                try
                 {
-                    try
+                    var previousAppDirectory = Directory
+                        .EnumerateDirectories(Settings.FlagrumDirectory)
+                        .FirstOrDefault(d => d.Contains(@"\app-") && !d.Contains($@"\app-{Version}"));
+
+                    var previousThumbnailDirectory = $@"{previousAppDirectory}\wwwroot\EarcMods";
+
+                    foreach (var thumbnail in Directory.EnumerateFiles(previousThumbnailDirectory))
                     {
-                        File.Move(thumbnail, $@"{IOHelper.GetWebRoot()}\EarcMods\{thumbnail.Split('\\').Last()}");
-                    }
-                    catch
-                    {
+                        try
+                        {
+                            File.Move(thumbnail, $@"{IOHelper.GetWebRoot()}\EarcMods\{thumbnail.Split('\\').Last()}");
+                        }
+                        catch
+                        {
     // Ignore
+                        }
                     }
+                }
+                catch
+                {
+                    // Ignore
                 }
 
                 VersionNotesModal.Open();
