More festival progress, first working full port of minigame gate model under PortTest4

--- a/Flagrum.Web/Features/AssetExplorer/ExplorerItemRow.razor
+++ b/Flagrum.Web/Features/AssetExplorer/ExplorerItemRow.razor
@@ -51,6 +51,7 @@
         ExplorerItemType.Material => "blur_circular",
         ExplorerItemType.Texture => "gradient",
         ExplorerItemType.Model => "view_in_ar",
+        ExplorerItemType.Xml => "share",
         _ => "insert_drive_file"
         };
 
