--- a/Flagrum.Web/Layout/PatchNotes.razor
+++ b/Flagrum.Web/Layout/PatchNotes.razor
@@ -1,5 +1,20 @@
 ﻿<h3 class="text-grey-300 mb-6">Flagrum has been updated to @Version!</h3>
+
 <div class="bg-grey-900 rounded-md border border-grey-700 p-4">
+    <h5 class="text-grey-300 mb-4">Flagrum 1.2.3</h5>
+    <ul class="list-disc ml-6 mb-2">
+        <li>Added more information to legacy mod installation to diagnose why certain mods won't install</li>
+        <li>Updated XML preview/export to encode dangerous symbols automatically</li>
+        <li>Fixed bug where EARC mods with &quot;Remove&quot; changes wouldn't save</li>
+        <li>Fixed bug where files would get into a bad state after re-enabling a mod with &quot;Remove&quot; changes</li>
+        <li>Fixed bug where legacy mods would be installed incorrectly if an existing mod removes its files</li>
+        <li>Fixed bug where EARC mods with &quot;Remove&quot; changes could not be exported</li>
+        <li>Fixed a crash when installing legacy mods with multiple conflicts</li>
+        <li>Fixed bug where text was truncated on Rebuild File Index dialog</li>
+    </ul>
+</div>
+
+<div class="bg-grey-900 rounded-md border border-grey-700 p-4 mt-6">
     <h5 class="text-grey-300 mb-4">Flagrum 1.2.2</h5>
     <ul class="list-disc ml-6 mb-2">
         <li>Fixed an issue affecting certain users on certain EARC mods where the asset explorer would target a
