--- a/Flagrum.Desktop/wwwroot/app.css
+++ b/Flagrum.Desktop/wwwroot/app.css
@@ -862,24 +862,6 @@ input:checked + .slider:before {
   }
 }
 
-.truncate-middle {
-  display: inline-flex;
-  flex-wrap: nowrap;
-  max-width: 100%;
-}
-
-.truncate-middle > div:first-child {
-  flex: 0 1 auto;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-}
-
-.truncate-middle > div + div {
-  flex: 1 0 auto;
-  white-space: nowrap;
-}
-
 .container {
   width: 100%;
 }
@@ -27655,6 +27637,7 @@ input:checked + .slider:before {
 }
 
 .input {
+  margin: 0px;
   border-radius: 0.375rem;
   --tw-bg-opacity: 1;
   background-color: rgba(16, 15, 12, var(--tw-bg-opacity));
@@ -27662,12 +27645,6 @@ input:checked + .slider:before {
   --tw-text-opacity: 1;
   color: rgba(168, 162, 158, var(--tw-text-opacity));
   outline: none;
-}
-
-.validation-message {
-  margin-top: 0.25rem;
-  --tw-text-opacity: 1;
-  color: rgba(126, 32, 32, var(--tw-text-opacity));
 }
 
 .min-w-400 {
